@@ -1,6 +1,6 @@
-Date: 2025-08-01
+Date: 2025-08-21
 Package: CHNOSZ
-Version: 2.2.0-3
+Version: 2.2.0-4
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
